--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 @import url(./blocks/elements/elements.css);
 @import url(./blocks/element/element.css);
 @import url(./blocks/element/__delete-button/element__delete-button.css);
+@import url(./blocks/element/__delete-button/_hidden/element__delete-button_hidden.css);
 @import url(./blocks/element/__title/element__title.css);
 @import url(./blocks/element/__mask-group/element__mask-group.css);
 @import url(./blocks/element/__like/element__like.css);
