Добавление Аутентификации на React

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__caption/header__caption.css);
+@import url(./blocks/header/__navigation/header__navigation.css);
+@import url(./blocks/header/__profile-email/header__profile-email.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__titles/profile__titles.css);
 @import url(./blocks/profile/__name/profile__name.css);
@@ -30,6 +33,7 @@
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/__title/popup__title.css);
 @import url(./blocks/popup/__title/_type/_delete-submit/popup__title_type_delete-submit.css);
+@import url(./blocks/popup/__title/_type/_info-tooltip/popup__title_type_info-tooltip.css);
 @import url(./blocks/popup/__submit-button/popup__submit-button.css);
 @import url(./blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
 @import url(./blocks/popup/__handlers/popup__handlers.css);
@@ -44,4 +48,28 @@
 @import url(./blocks/popup/__image-caption/popup__image-caption.css);
 @import url(./blocks/popup/__error-message/popup__error-message.css);
 @import url(./blocks/popup/__error-message/_visible/popup__error-message_visible.css);
+@import url(./blocks/popup/__tooltip-image/popup__tooltip-image.css);
 @import url(./blocks/root/root.css);
+@import url(./blocks/login/__container/login__container.css);
+@import url(./blocks/login/__field-container/login__field-container.css);
+@import url(./blocks/login/__field/login__field.css);
+@import url(./blocks/login/__form/login__form.css);
+@import url(./blocks/login/__submit-button/login__submit-button.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/registration/__container/registration__container.css);
+@import url(./blocks/registration/__field-container/registration__field-container.css);
+@import url(./blocks/registration/__field/registration__field.css);
+@import url(./blocks/registration/__form/registration__form.css);
+@import url(./blocks/registration/__login-redirect/registration__login-redirect.css);
+@import url(./blocks/registration/__submit-button/registration__submit-button.css);
+@import url(./blocks/registration/__title/registration__title.css);
+
+
+
+
+
+
+
+
+
+
