--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,6 +3,9 @@
   border-bottom: 1px solid rgba(84, 84, 84, .7);
   margin: auto;
   padding: 45px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 783px) and (max-width: 1024px) {
@@ -18,3 +21,7 @@
     margin-top: 0;
   }
 }
+
+
+
+
